@@ -4636,22 +4636,27 @@ SEXP R_igraph_reciprocity(SEXP graph, SEXP pignore_loops) {
   return result;
 }
   
-SEXP R_igraph_layout_reingold_tilford(SEXP graph, SEXP proot, SEXP pcirc) {
+SEXP R_igraph_layout_reingold_tilford(SEXP graph, SEXP proot, 
+				      SEXP pmode, SEXP prootlevel, SEXP pcirc) {
   
   igraph_t g;
-  igraph_integer_t root=REAL(proot)[0];
+  igraph_vector_t root;
   igraph_matrix_t res;
   igraph_bool_t circ=LOGICAL(pcirc)[0];
+  int mode=REAL(pmode)[0];
+  igraph_vector_t rootlevel;
   SEXP result;
   
   R_igraph_before();
   
   R_SEXP_to_igraph(graph, &g);
+  R_SEXP_to_vector(proot, &root);
+  R_SEXP_to_vector(prootlevel, &rootlevel);
   igraph_matrix_init(&res, 0, 0);
   if (!circ) {
-    igraph_layout_reingold_tilford(&g, &res, root);
+    igraph_layout_reingold_tilford(&g, &res, mode, &root, &rootlevel);
   } else {
-    igraph_layout_reingold_tilford_circular(&g, &res, root);
+    igraph_layout_reingold_tilford_circular(&g, &res, mode, &root, &rootlevel);
   }
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
